[tool.poetry]
name = "repl_python3_LaruBot"
version = "0.1.0"
description = ""
authors = ["hminkoo10 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
Flask = "^2.1.1"
bs4 = "^0.0.1"
youtube_dl = "^2021.12.17"
discord-py-slash-command = "^3.0.3"
youtube-search = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
